docs: Fixed Minor Typo

--- a/Math/SVD.ipynb
+++ b/Math/SVD.ipynb
@@ -217,11 +217,11 @@
     "$$ \n",
     "\n",
     "\n",
-    "(i) $\\quad rank(A)=r$\n",
-    "(ii) $\\:\\:\\:\\: \\{\\vec{u}_1,\\vec{u}_2,\\cdots,\\vec{u}_r\\}\\quad: Col(A)$의 정규직교기저\n",
-    "(iii) $\\:\\:\\: \\{\\vec{u}_{r+1},\\vec{u}_{r+2},\\cdots,\\vec{u}_m\\}\\quad: Null(A^T)$의 정규직교기저\n",
-    "(iv) $\\:\\:\\: \\{\\vec{v}_1,\\vec{v}_2,\\cdots,\\vec{v}_r\\}\\quad: Row(A)$의 정규직교기저\n",
-    "(v) $\\quad \\{\\vec{v}_{r+1},\\vec{v}_{r+2},\\cdots,\\vec{v}_n\\}\\quad: Null(A)$의 정규직교기저\n",
+    "(i) $\\quad rank(A)=r$       \n",
+    "(ii) $\\:\\:\\:\\: \\{\\vec{u}_1,\\vec{u}_2,\\cdots,\\vec{u}_r\\}\\quad: Col(A)$의 정규직교기저        \n",
+    "(iii) $\\:\\:\\: \\{\\vec{u}_{r+1},\\vec{u}_{r+2},\\cdots,\\vec{u}_m\\}\\quad: Null(A^T)$의 정규직교기저      \n",
+    "(iv) $\\:\\:\\: \\{\\vec{v}_1,\\vec{v}_2,\\cdots,\\vec{v}_r\\}\\quad: Row(A)$의 정규직교기저      \n",
+    "(v) $\\quad \\{\\vec{v}_{r+1},\\vec{v}_{r+2},\\cdots,\\vec{v}_n\\}\\quad: Null(A)$의 정규직교기저       \n",
     "\n",
     "### (4) 유사역원(Pseudo Inverse, Moore-Penrose Inverse)\n",
     "$m\\times n$행렬 $A$에 대하여 $V, \\Sigma, U$ 를 특이값분해행렬이라 하자. 즉, $A=U\\Sigma V^T$ 이다. \n",
@@ -235,7 +235,7 @@
     "\n",
     "만약 $A$가 가역행렬이면 $A^{-1}=A^+$ 이다.\n",
     "\n",
-    "@ 출처: 학부 및 대학원에서 본인의 Lecture Note - 수리통계학, 통계방법론, Statistical Inference"
+    "@ 출처: 학부 및 대학원에서 본인의 Lecture Note - 선형대수학"
    ]
   }
  ],
