docs: Minor Change in Comments

--- a/Math/SVD.ipynb
+++ b/Math/SVD.ipynb
@@ -235,7 +235,7 @@
     "\n",
     "만약 $A$가 가역행렬이면 $A^{-1}=A^+$ 이다.\n",
     "\n",
-    "@ 출처: 학부 및 대학원에서 본인의 Lecture Note - 선형대수학"
+    "_출처: 학부 및 대학원에서 본인의 Lecture Note - 선형대수학_"
    ]
   }
  ],
