--- a/Algorithm/Data Structure and Algorithm.ipynb
+++ b/Algorithm/Data Structure and Algorithm.ipynb
@@ -714,7 +714,13 @@
     "- 임의 크기 데이터를 고정된 길이의 데이터로 매핑하는데 사용할 수 있는 함수\n",
     "- 파이썬의 `dict`, `set`이 대표적인 해시테이블 기반 구조\n",
     "\n",
-    "<center><img src='image/hash_table.jpg', width=600></center>"
+    "<center><img src='image/Data Structure and Algorithm_hash_table.svg', width=600></center>\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "\n",
+    "[Hash Table in Data Structure](https://simplerize.com/data-structures/hash-table-introduction)\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -948,7 +954,7 @@
    "source": [
     "### 5) 그래프(graph)\n",
     "\n",
-    "<img src=\"image/graph.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"image/Data Structure and Algorithm_graph.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "<br>\n",
     "\n",
     "* 참고) 트리도 그래프 안에 포함된다: 각 딕셔너리의 key가 트리의 부모 Node, value들은 자식 Node로 표현"
@@ -1050,7 +1056,7 @@
     "예시) \n",
     "<br>\n",
     "\n",
-    "<img src=\"image/graph_weighted.jpg\" width=\"600\" style=\"display: block; margin: 0;\">"
+    "<img src=\"image/Data Structure and Algorithm_graph_weighted.jpg\" width=\"600\" style=\"display: block; margin: 0;\">"
    ]
   },
   {
@@ -1133,8 +1139,28 @@
    "id": "d90d42cd",
    "metadata": {},
    "source": [
-    "<center><img src='image/recursive_function1.jpg', width = 700></center>\n",
-    "<center><img src='image/recursive_function2.jpg', width = 700></center>"
+    "피보나치 수열 예시)\n",
+    "```python\n",
+    "def fib(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    elif n > 1:\n",
+    "        return fib(n-1) + fib(n-2)\n",
+    "    else:\n",
+    "        class fibError(Exception):\n",
+    "            pass\n",
+    "        raise fibError(\"n must be positive!\")\n",
+    "```\n",
+    "\n",
+    "<center><img src='image/Data Structure and Algorithm_recursive_function.png', width = 700></center>\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "\n",
+    "[Emulating recursion using a stack](https://www.eecs.yorku.ca/course_archive/2016-17/F/2030/labs/lab7/lab7.html)\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -1178,7 +1204,9 @@
     "\n",
     "**예시)**\n",
     "\n",
-    "<img src=\"image/bfs.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"image/Data Structure and Algorithm_bfs.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "\n",
+    "\n",
     "<br>\n",
     "\n",
     "> [1] 1을 큐에추가한 뒤 추출, 그 자식 노드들을 append하면 순서대로 8, 5, 2 가 들어감    \n",
@@ -1283,7 +1311,7 @@
     "\n",
     "**예시)**\n",
     "\n",
-    "<img src=\"image/dfs.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"image/Data Structure and Algorithm_dfs.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "<br>\n",
     "\n",
     "> [1] 재귀함수를 통해 자식노드가 없을 때까지 계속해서 왼쪽부터 수직아래로 내려가며 자료를 탐색   \n",
@@ -1371,7 +1399,9 @@
     "* 장점: 구형하기 쉽고, 정렬되지 않은 상태에서도 사용 가능\n",
     "* 단점: 검색 대상 리스트가 길어지면 비효율적 - (최대) 시간 복잡도: $O(n)$\n",
     "\n",
-    "<img src=\"image/linear_search.jpg\" width=\"600\" style=\"display: block; margin: 0;\">"
+    "<img src=\"image/Data Structure and Algorithm_linear_search.png\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "\n",
+    "[What is Linear Search?](https://www.geeksforgeeks.org/dsa/what-is-linear-search/)"
    ]
   },
   {
@@ -1427,7 +1457,9 @@
     "* 장점: 선형 탐색에 비해 빠른 속도 - 시간 복잡도: $O(log{n})$\n",
     "* 단점: 미리 오름차순 정렬되어 있어야 사용 가능\n",
     "\n",
-    "<img src=\"image/binary_search.jpg\" width=\"600\" style=\"display: block; margin: 0;\">"
+    "<img src=\"image/Data Structure and Algorithm_binary_search.png\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "\n",
+    "[Algorithms: Binary Search](https://dolly-desir.medium.com/algorithms-binary-search-2656c7eb5049)"
    ]
   },
   {
@@ -1546,7 +1578,7 @@
     "* 상용 라이브러리에 많이 쓰임\n",
     "* 시간 복잡도: $O(nlog(n))$\n",
     "\n",
-    "<img src=\"image/merge_sort.jpg\" width=\"1200\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"image/Data Structure and Algorithm_merge_sort.jpg\" width=\"1200\" style=\"display: block; margin: 0;\">\n",
     "\n",
     "<br>\n",
     "\n",
@@ -1697,23 +1729,23 @@
     "* 평균 시간 복잡도: $O(nlog(n))$\n",
     "* 최악 시간 복잡도: $O(n^2)$\n",
     "\n",
-    "<img src=\"image/quick_sort1.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"image/Data Structure and Algorithm_quick_sort1.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "<br>\n",
     "\n",
     "> [1] pivot을 0번째 값으로 지정했다고 하자.     \n",
     "> [2] 이 pivot을 기준으로 list를 탐색하며 pivot보다 [작은 값들], [같은 값들], [큰 값들]로 모아서 나눠준다.\n",
     "\n",
     "<br>\n",
-    "<img src=\"image/quick_sort2.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"image/Data Structure and Algorithm_quick_sort2.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "<br>\n",
-    "<img src=\"image/quick_sort3.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"image/Data Structure and Algorithm_quick_sort3.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "<br>\n",
     "\n",
     "> [3] 나눠진 [작은 값들], [큰 값들]에 대해서 다시 quick_sort를 해준다.  $\\quad$ _- 재귀함수 이용: 따라서 이 때에도 pivot은 계속 위에서 정한 pivot과 같이 각 값들의 0번째 값_    \n",
     "> [4] 이를 나눠진 값들의 길이가 모두 1 이하일 때까지 반복한다.\n",
     "\n",
     "<br>\n",
-    "<img src=\"image/quick_sort4.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"image/Data Structure and Algorithm_quick_sort4.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "<br>\n",
     "\n",
     "> [5] 최종적으로 나눠진 값들을 그대로 이어 붙여주면 된다."
@@ -2021,8 +2053,11 @@
     "* 복잡한 문제를 작은 문제로 나눠서 푸는 기법 (분할 정복)\n",
     "* 이전에 계산한 결과를 저장한 후 재활용 (메모이제이션과 비슷)\n",
     "\n",
-    "<img src=\"image/dp.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
-    "<br>"
+    "|       |   다이나믹 프로그래밍   |   메모이제이션    |\n",
+    "|:-----:|:--------------------:|:---------------:|\n",
+    "|접근 방식| Bottom-up           | Top-down          |\n",
+    "|처리 방식| 반복문              | 재귀              |\n",
+    "|중간 결과 저장|    O           |   O               |"
    ]
   },
   {
