--- a/Algorithm/Data Structure and Algorithm.ipynb
+++ b/Algorithm/Data Structure and Algorithm.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "80f8146a",
    "metadata": {},
    "outputs": [
@@ -111,8 +111,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140732518517176\n",
-      "140732518517176\n"
+      "140725797079480\n",
+      "140725797079480\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "08dd7d25",
    "metadata": {},
    "outputs": [
@@ -134,13 +134,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2137485470656\n",
-      "140732518517176\n",
-      "140732518517208\n",
+      "2430425259456\n",
+      "140725797079480\n",
+      "140725797079512\n",
       "\n",
-      "2137485470656\n",
-      "140732518517304\n",
-      "140732518517208\n"
+      "2430425259456\n",
+      "140725797079608\n",
+      "140725797079512\n"
      ]
     }
    ],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "35f7421c",
    "metadata": {},
    "outputs": [
@@ -168,14 +168,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2137491611456\n",
-      "140732518517176\n",
-      "140732518517208\n",
-      "140732518517240\n",
+      "2430419924736\n",
+      "140725797079480\n",
+      "140725797079512\n",
+      "140725797079544\n",
       "\n",
-      "2137491611456\n",
-      "140732518517176\n",
-      "140732518517240\n"
+      "2430419924736\n",
+      "140725797079480\n",
+      "140725797079544\n"
      ]
     }
    ],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "6330c899",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "id": "a1e67ebe",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "73aabaa4",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "ec706b95",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "id": "fa93adcf",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "id": "dc9fe604",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "id": "97402851",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "id": "0d8902de",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "id": "7a83a8ad",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "id": "0311a5f0",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "id": "667e3344",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "id": "e6736cec",
    "metadata": {},
    "outputs": [],
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 20,
    "id": "6abc103a",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 21,
    "id": "f0727046",
    "metadata": {},
    "outputs": [],
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 22,
    "id": "239a9a19",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 23,
    "id": "32792017",
    "metadata": {},
    "outputs": [],
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 24,
    "id": "a31875c8",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "id": "3f44f221",
    "metadata": {},
    "outputs": [
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 26,
    "id": "785ffb3e",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "77c4838e",
    "metadata": {},
    "outputs": [
@@ -802,7 +802,7 @@
      "output_type": "stream",
      "text": [
       "b'\\xec\\xb2\\xa0\\xec\\x88\\x98'\n",
-      "<sha256 _hashlib.HASH object @ 0x000001F1ACA5CE10>\n",
+      "<sha256 _hashlib.HASH object @ 0x00000235E09B3F50>\n",
       "133a61b3559a6f56b8efe3d2b3fc3b73874a31ac26e4ea32166094ded3d5f1c0\n"
      ]
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 28,
    "id": "81e593c2",
    "metadata": {},
    "outputs": [],
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 29,
    "id": "d68410b7",
    "metadata": {},
    "outputs": [
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 30,
    "id": "70e400a4",
    "metadata": {},
    "outputs": [
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 31,
    "id": "301d6ed3",
    "metadata": {},
    "outputs": [
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 32,
    "id": "c10041e0",
    "metadata": {},
    "outputs": [],
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 33,
    "id": "c1380b30",
    "metadata": {},
    "outputs": [
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 34,
    "id": "05c4eb28",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1027,7 @@
        "{1: [2, 3, 4], 2: [1, 4, 5], 3: [1, 4], 4: [1, 2, 3, 5], 5: [2, 4]}"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 35,
    "id": "b611e53d",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1075,7 @@
        " 5: []}"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "5c6f56c9",
    "metadata": {},
    "outputs": [
@@ -1175,7 +1175,7 @@
        "120"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 37,
    "id": "3f052b53",
    "metadata": {},
    "outputs": [],
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "820ecd78",
    "metadata": {},
    "outputs": [],
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 39,
    "id": "488a1add",
    "metadata": {},
    "outputs": [
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 40,
    "id": "becbae9f",
    "metadata": {},
    "outputs": [],
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 41,
    "id": "cebb9f46",
    "metadata": {},
    "outputs": [],
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 42,
    "id": "37683f2e",
    "metadata": {},
    "outputs": [
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 43,
    "id": "1da8b6fd",
    "metadata": {},
    "outputs": [],
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 44,
    "id": "6cf3ce6b",
    "metadata": {},
    "outputs": [
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 45,
    "id": "b3e113e3",
    "metadata": {},
    "outputs": [],
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 46,
    "id": "a1edbf35",
    "metadata": {},
    "outputs": [
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "fd1517da",
    "metadata": {},
    "outputs": [],
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 48,
    "id": "ac2bf711",
    "metadata": {},
    "outputs": [
@@ -1556,7 +1556,7 @@
        "[1, 2, 3, 5, 9]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1587,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "ffdf49cc",
    "metadata": {},
    "outputs": [],
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 50,
    "id": "564d7e1b",
    "metadata": {},
    "outputs": [
@@ -1707,7 +1707,7 @@
        "[1, 8, 12, 25, 33, 42, 51]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "3cf86c0b",
    "metadata": {},
    "outputs": [],
@@ -1780,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 52,
    "id": "30eff60f",
    "metadata": {},
    "outputs": [
@@ -1790,7 +1790,7 @@
        "[1, 1, 2, 2, 2, 3, 5, 9]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1833,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "84debddb",
    "metadata": {},
    "outputs": [],
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 54,
    "id": "360f67d1",
    "metadata": {},
    "outputs": [
@@ -1928,8 +1928,8 @@
       "실행! → n = 18\n",
       "{2: 1, 3: 2, 4: 3, 5: 5, 6: 8, 7: 13, 8: 21, 9: 34, 10: 55, 11: 89, 12: 144, 13: 233, 14: 377, 15: 610, 16: 987, 17: 1597, 18: 2584, 19: 4181, 20: 6765}\n",
       "\n",
-      "재귀만 사용했을 때 걸린 시간: 0.0009992122650146484 초\n",
-      "메모이제이션 적용했을 때 걸린 시간: 0.0 초\n"
+      "재귀만 사용했을 때 걸린 시간: 0.0 초\n",
+      "메모이제이션 적용했을 때 걸린 시간: 0.00099945068359375 초\n"
      ]
     }
    ],
@@ -1974,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "c3deb4df",
    "metadata": {},
    "outputs": [
@@ -2014,7 +2014,7 @@
       "실행! → n = 28\n",
       "{2: 1, 3: 2, 4: 3, 5: 5, 6: 8, 7: 13, 8: 21, 9: 34, 10: 55, 11: 89, 12: 144, 13: 233, 14: 377, 15: 610, 16: 987, 17: 1597, 18: 2584, 19: 4181, 20: 6765, 21: 10946, 22: 17711, 23: 28657, 24: 46368, 25: 75025, 26: 121393, 27: 196418, 28: 317811, 29: 514229, 30: 832040}\n",
       "\n",
-      "재귀만 사용했을 때 걸린 시간: 0.06990885734558105 초\n",
+      "재귀만 사용했을 때 걸린 시간: 0.06900453567504883 초\n",
       "메모이제이션 적용했을 때 걸린 시간: 0.0 초\n"
      ]
     }
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 56,
    "id": "8964f031",
    "metadata": {},
    "outputs": [],
@@ -2080,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 57,
    "id": "f2a5700a",
    "metadata": {},
    "outputs": [
@@ -2101,7 +2101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 58,
    "id": "626549fa",
    "metadata": {},
    "outputs": [],
@@ -2124,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 59,
    "id": "7723317f",
    "metadata": {},
    "outputs": [
@@ -2134,7 +2134,7 @@
        "242"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
