docs: Replace Image Links

--- a/Statistics/SVD.ipynb
+++ b/Statistics/SVD.ipynb
@@ -104,7 +104,8 @@
     "\n",
     "(i) $\\vec{u_{pr}}+\\vec{u_c}=\\vec{u} \\qquad$\t(ii) $\\vec{u_{pr}} \\parallel \\vec{v} \\qquad$ (iii) $\\vec{u_c} \\perp \\vec{v}$\n",
     "\n",
-    "![](https://velog.velcdn.com/images/jwk143/post/1a57b4b4-0a32-40a9-9b90-0bfd1342c031/image.jpg)\n",
+    "\n",
+    "<center><img src='image/SVD_orthogonal_projection_r2.jpg', width = 600></center>\n",
     "\n",
     "\n",
     "#### [2] $\\mathbb{R}^3$에서의 직교사영\n",
@@ -118,7 +119,8 @@
     "\n",
     "④ $\\vec{u_c}=\\vec{u}-\\vec{u_{pr}}=\\vec{u}-\\dfrac{\\vec{u} \\cdot \\vec{v}_1}{\\vec{v}_1 \\cdot \\vec{v}_1}\\vec{v}_1 - \\dfrac{\\vec{u} \\cdot \\vec{v}_2}{\\vec{v}_2 \\cdot \\vec{v}_2}\\vec{v}_2 \\qquad$ : $Span(\\vec{v}_1,\\vec{v}_2)$ 에 직교하는 $\\vec{u}$ 의 벡터성분\n",
     "\n",
-    "![](https://velog.velcdn.com/images/jwk143/post/811ad088-963c-4f90-abeb-9c425b32f6ba/image.jpg)\n",
+    "\n",
+    "<center><img src='image/SVD_orthogonal_projection_r3.jpg', width = 600></center>\n",
     "\n",
     "\n",
     "#### [3] $\\mathbb{R}^n$에서의 직교사영\n",
@@ -154,7 +156,7 @@
     ">\n",
     "> $\\quad \\vec{u}_2=\\vec{v}_{2c}=\\vec{v}_2-\\vec{v}_{2pr}=\\vec{v}_2-\\dfrac{\\vec{v}_2 \\cdot \\vec{u}_1}{\\vec{u}_1 \\cdot \\vec{u}_1}\\vec{u}_1$\n",
     ">\n",
-    "> ![](https://velog.velcdn.com/images/jwk143/post/74816e29-fe0d-46aa-8c84-99ea3e418d3a/image.jpg)\n",
+    "> <center><img src='image/SVD_gram_schmidt_r2.jpg', width = 600></center>\n",
     ">\n",
     "> $\\quad$ 이제 $\\vec{u}_2$를 만들었으니 $\\vec{v}_2$는 사용하지 않는다.\n",
     "> <br>\n",
@@ -163,7 +165,7 @@
     "> \n",
     "> $\\quad \\vec{u}_2=\\vec{v}_{3c}=\\vec{v}_3-\\vec{v}_{3pr}=\\vec{v}_3-\\dfrac{\\vec{v}_3 \\cdot \\vec{u}_1}{\\vec{u}_1 \\cdot \\vec{u}_1}\\vec{u}_1-\\dfrac{\\vec{v}_3 \\cdot \\vec{u}_2}{\\vec{u}_2 \\cdot \\vec{u}_2}\\vec{u}_2$\n",
     ">\n",
-    ">![](https://velog.velcdn.com/images/jwk143/post/48059964-d0a1-4e43-879c-bbe43283a181/image.jpg)\n",
+    "> <center><img src='image/SVD_gram_schmidt_r3.jpg', width = 600></center>\n",
     ">\n",
     "> $\\quad$ 이제 $\\vec{u}_3$를 만들었으니 $\\vec{v}_3$는 사용하지 않는다.\n",
     "> <br>\n",
@@ -184,8 +186,13 @@
     "\\Sigma=\\begin{bmatrix} D & 0 \\\\ 0 & 0 \\end{bmatrix} \n",
     ", D=\\begin{bmatrix} \\sigma_1 & 0 & \\cdots & 0 \\\\ 0 & \\sigma_2 &\\cdots & 0 \\\\ \\cdots & \\cdots & \\cdots &\\cdots \\\\ 0 & 0 & \\cdots & \\sigma_r\\end{bmatrix} \n",
     "$$ \n",
-    "> ![](https://velog.velcdn.com/images/jwk143/post/da10c08e-2231-4853-b070-56d4873acfda/image.webp)\n",
-    "_<center>https://towardsdatascience.com/singular-value-decomposition-svd-demystified-57fc44b802a0/</center>_\n",
+    "> <center><img src='image/SVD_SVD.webp', width = 900></center>\n",
+    ">\n",
+    "> <div align ='center'>\n",
+    ">\n",
+    "> [Singular Value Decomposition (SVD), Demystified](https://towardsdatascience.com/singular-value-decomposition-svd-demystified-57fc44b802a0/)\n",
+    ">\n",
+    "> </div>\n",
     "\n",
     "### (2) 도출\n",
     "① 대칭행렬 $A^TA$를 구한다. (직교대각화 가능)\n",
