--- a/Statistics/SVD and PCA.ipynb
+++ b/Statistics/SVD and PCA.ipynb
@@ -244,6 +244,130 @@
     "\n",
     "_출처: 학부 및 대학원에서 본인의 Lecture Note - 선형대수학_"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "955d7ce3",
+   "metadata": {},
+   "source": [
+    "# 4. 주성분 분석(PCA; Principal Component Analysis)\n",
+    "## (1) 목적\n",
+    "* 고차원 데이터를 정보 손실을 최소화하면서 저차원으로 투영하는 것이다.  \n",
+    "* 분산이 클수록 데이터를 잘 설명할 수 있다.\n",
+    "* 따라서, 데이터의 분산이 가장 큰 방향(주성분)을 찾는 것이 핵심이다.\n",
+    "\n",
+    "## (2) 방법\n",
+    "기존 입력 변수를 표현하는 좌표축들을 다른 좌표축으로 변환시킨 뒤 데이터를 가장 잘 설명할 수 있는(분산이 가장 큰) 몇몇 차원만 선택하여 차원을 줄인다.\n",
+    "\n",
+    "> **예시**\n",
+    ">\n",
+    "> **Step 1.** 2개의 feature X, Y 존재 <br>\n",
+    ">\n",
+    "> <img src='image/PCA_pca1.webp' width=\"600\" style=\"display: block; margin: 0;\"><br>\n",
+    "> **Step 2.** 분산이 가장 큰 좌표축과 해당 좌표축과 서로 직교하는 새로운 축을 찾는다 → V1 (분산이 가장 큰 좌표축), V2 <br>\n",
+    ">\n",
+    "> <img src='image/PCA_pca2.webp' width=\"600\" style=\"display: block; margin: 0;\"><br>\n",
+    "> **Step 3.** V1, V2를 새로운 좌표축 PC1, PC2로 만들고, 데이터를 가장 잘 설명할 수 있는 좌표축 PC1만 남겨둔다. <br>\n",
+    ">\n",
+    "> <img src='image/PCA_pca3.webp' width=\"600\" style=\"display: block; margin: 0;\">\n",
+    ">\n",
+    "> [Principal Component Analysis Guide & Example](https://statisticsbyjim.com/basics/principal-component-analysis/)\n",
+    "\n",
+    "## (2) 수식을 이용한 구체적인 단계 설명\n",
+    "### [1] 데이터 정규화 (평균 제거)\n",
+    "$X$ 를 $n$개의 관측치와 $p$개의 feature를 가지고 있는 데이터라고 하자: $X \\in \\mathbb{R}^{n\\times p}$     \n",
+    "우선 각 feature에 대해 중심화를 수행하여 각 특성의 평균이 0이 되게 한다.   \n",
+    "각 관측치 $i=1,2,\\cdots,n$ 와 feature $j=1,2,\\cdots,p$ 에 대해\n",
+    "\n",
+    "① 열별 평균 계산\n",
+    "\n",
+    "$\\mu_j = \\dfrac{1}{n} \\sum_{i=1}^n X_{ij}, \\quad \\text{for } j = 1, 2, \\dots, p$\n",
+    "\n",
+    "이를 벡터로 표시하면, \n",
+    "\n",
+    "$\\vec{\\mu} = \\dfrac{1}{n} X^\\top \\mathbf{1}_n$, $\\quad \\mathbf{1}_n \\in \\mathbb{R}^{n\\times 1}$ 은 모든 성분이 1인 열벡터.\n",
+    "\n",
+    "따라서 $\\vec{\\mu} = \\begin{bmatrix} \\mu_1 \\\\ \\mu_2 \\\\ \\vdots \\\\ \\mu_p \\end{bmatrix} \\in \\mathbb{R}^{p\\times 1}$ 인 p차원의 열벡터이다.\n",
+    "\n",
+    "② 평균 제거\n",
+    "\n",
+    "$\\tilde{X}_{ij} = X_{ij} - \\mu_j, \\quad \\text{for } i = 1, \\dots, n,\\ j = 1, \\dots, p$\n",
+    "\n",
+    "이를 벡터로 표시하면,\n",
+    "\n",
+    "$\\tilde{X} = X - \\mathbf{1}_n \\vec{\\mu}^\\top ,\\quad \\tilde{X} \\in \\mathbb{R}^{n\\times p}$\n",
+    "\n",
+    "\n",
+    "### [2] SVD 수행\n",
+    "\n",
+    "$\\tilde{X} = U \\Sigma V^\\top$\n",
+    "\n",
+    "이 때       \n",
+    "① $V$는 직교행렬이므로 $V$의 열벡터들은 정규직교이며,         \n",
+    "② 각 특이값(표준편차) \n",
+    "$\\sigma_1=\\sqrt{\\lambda_1} \\ge \\sigma_2=\\sqrt{\\lambda_2} \\ge \\cdots \\ge \\sigma_n=\\sqrt{\\lambda_n} \\ge 0$ 으로부터 도출된 정규직교 벡터들을 대응되게 순서대로 나열한 행렬 $ V=[\\vec{v}_1 \\quad \\vec{v}_2 \\quad \\cdots \\quad \\vec{v}_n]$ 이다.        \n",
+    "$\\quad$ **즉, $V$의 열벡터들은 특이값의 제곱(=분산)의 내림차순 기준으로 정렬되어 있다.**\n",
+    "\n",
+    "> **공분산 행렬과 SVD**       \n",
+    "> * 평균 0으로 중심화된 데이터에 대해 행렬 $\\tilde{X} \\in \\mathbb{R}^{n\\times p}$ 의 공분산 행렬은 \n",
+    "> $Cov(\\tilde{X}) = \\frac{1}{n} \\tilde{X}^\\top \\tilde{X}$ 인데 이 공분산행렬을 고유값 분해하면          \n",
+    "> $Cov(\\tilde{X}) = V \\Lambda V^\\top$ ($\\Lambda = diag(\\lambda_1,\\cdots,\\lambda_p)$ : 고유값들(분산 크기, 내림차순), $V \\in \\mathbb{R}^{p\\times p}$ : 각 $\\lambda$ 에 대응되는 고유벡터들)이다.      \n",
+    "> \n",
+    "> * 이제 $\\tilde{X}$ 를 SVD 분해한 $\\tilde{X} = U \\Sigma V^\\top$ 을 대입하면 $U=[\\vec{u}_1 \\quad \\vec{u}_2 \\quad \\cdots \\quad \\vec{u}_n]$ 은 직교행렬 $(\\{\\vec{u}_1, \\cdots,\\vec{u}_n\\}$ 가 정규직교집합$)$ 이므로         \n",
+    "> $$\n",
+    "> \\tilde{X}^\\top \\tilde{X}\n",
+    "> = (U \\Sigma V^\\top)^\\top (U \\Sigma V^\\top)\n",
+    "> = V \\Sigma^\\top U^\\top U \\Sigma V^\\top\n",
+    "> = V \\Sigma^2 V^\\top\n",
+    "> $$\n",
+    ">         \n",
+    "> $\\qquad \\therefore \\tilde{X}^\\top \\tilde{X}$ 의 고유값: $\\Sigma^2$ 의 대각 원소 (**즉, 분산**)          \n",
+    "> $\\qquad \\quad \\tilde{X}^\\top \\tilde{X}$ 의 고유벡터: $V$ 의 열벡터\n",
+    "\n",
+    "\n",
+    "### [3] 주성분 선택\n",
+    "\n",
+    "$V=[\\vec{v}_1 \\quad \\vec{v}_2 \\quad \\cdots \\quad \\vec{v}_n] \\in \\mathbb{R}^{p \\times p}$            \n",
+    "상위 $k$개의 주성분 선택: \n",
+    "$W = [\\vec{v}_1 \\quad \\vec{v}_2 \\quad \\cdots \\quad \\vec{v}_k] \\in \\mathbb{R}^{p \\times k}$\n",
+    "\n",
+    "\n",
+    "### [4] 데이터 차원 축소\n",
+    "\n",
+    "$Z = \\tilde{X} W \\in \\mathbb{R}^{n \\times k}$\n",
+    "→ 이것이 원래 데이터 $X$를 $k$-차원 주성분 공간에 투영한 결과이다.\n",
+    "\n",
+    "\n",
+    "### [5] 원래 차원으로 복원 (선택)\n",
+    "\n",
+    "$\\hat{X} = Z W^\\top + \\bar{X}$          \n",
+    "→ 복원된 데이터 $\\hat{X} \\in \\mathbb{R}^{n \\times p}$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "> **참고: [1] 데이터 정규화에서 분산까지 1로 만드는 경우 (표준화: 평균 0, 분산 1)**         \n",
+    "> PCA에 반드시 필요한 과정은 아니지만, 각 feature의 단위(scale)이 매우 다를 때 수행한다:        \n",
+    "> $\\qquad \\qquad \\qquad \\qquad \\text{standardized } \\tilde{X} = \\dfrac{X_{ij}-\\mu_j}{\\sigma_j}$         \n",
+    "> 벡터로 표현하는 경우: $X^{std} = (X - \\vec{\\mu}) \\oslash \\vec{\\sigma}$          \n",
+    "> $\\qquad \\qquad \\qquad \\qquad \\vec{\\mu} \\in \\mathbb{R}^{1 \\times p} : $ 평균 벡터              \n",
+    "> $\\qquad \\qquad \\qquad \\qquad \\vec{\\sigma} \\in \\mathbb{R}^{1 \\times p} : $ 표준편차 벡터               \n",
+    "> $\\qquad \\qquad \\qquad \\qquad \\oslash : $ 열 단위로 나누는 브로드캐스팅 연산 (element-wise division)             \n",
+    "> - 표준화하는 경우 이제 [2]에서 **공분산 행렬이 아니라 상관계수 행렬(correlation matrix)**의 고유분해를 수행하는 것과 같다.          \n",
+    "> - 결과적으로 찾는 주성분 방향은 동일한 방식으로 구해지지만, 단위가 정규화된 축에서의 최대 분산 방향이 될 뿐이다.           \n",
+    "\n",
+    "\n",
+    "## (3) 선형변환으로서의 PCA\n",
+    "\n",
+    "PCA의 투영:  $Z = \\tilde{X} W \\qquad W = [\\vec{v}_1, \\dots, \\vec{v}_k] \\in \\mathbb{R}^{p\\times k}, \\quad Z \\in \\mathbb{R}^{n\\times k}$    \n",
+    "$\\Rightarrow$ **따라서 PCA는 원점을 지나면서 기저를 회전 및 축소시키는 선형사상(linear transformation)이다.**\n",
+    "\n",
+    "> $\\tilde{X}$ 의 $i$번째 행벡터(샘플)의 전치를 $\\tilde{x}_i$ 라고 하자. ($\\vec{\\tilde{x}_i} \\in \\mathbb{R}^{p}$ 는 $p$차원 열벡터)      \n",
+    "> 또한 $\\vec{z}_i$ 를 $Z$ 의 $i$번째 행벡터(샘플)의 전치라 하면,          \n",
+    "> 각 샘플 $\\vec{\\tilde{x}_i}$ 에 대해 $\\vec{z}_i = W^\\top\\vec{\\tilde{x}_i} \\in \\mathbb{R}^{k}$ ($k$차원 열벡터) 이고,           \n",
+    "> 이는 곧 PCA가 $\\vec{\\tilde{x}_i}$ 를 $W^\\top$ 라는 행렬을 곱해서 저차원 벡터 $\\vec{z}_i$ 로 보내는 변환을 의미한다.         \n",
+    "\n",
+    "_출처: 대학원에서 본인의 Lecture Note - Linear Regression, Macroeconometrics, Advanced Machine Learning_"
+   ]
   }
  ],
  "metadata": {
