docs: Minor Format Change

--- a/Statistics/SVD and PCA.ipynb
+++ b/Statistics/SVD and PCA.ipynb
@@ -242,7 +242,11 @@
     "\n",
     "만약 $A$가 가역행렬이면 $A^{-1}=A^+$ 이다.\n",
     "\n",
-    "_출처: 학부 및 대학원에서 본인의 Lecture Note - 선형대수학_"
+    "<br>\n",
+    "\n",
+    "_**출처: 학부 및 대학원에서 본인의 Lecture Note - 선형대수학**_\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -366,7 +370,9 @@
     "> 각 샘플 $\\vec{\\tilde{x}_i}$ 에 대해 $\\vec{z}_i = W^\\top\\vec{\\tilde{x}_i} \\in \\mathbb{R}^{k}$ ($k$차원 열벡터) 이고,           \n",
     "> 이는 곧 PCA가 $\\vec{\\tilde{x}_i}$ 를 $W^\\top$ 라는 행렬을 곱해서 저차원 벡터 $\\vec{z}_i$ 로 보내는 변환을 의미한다.         \n",
     "\n",
-    "_출처: 대학원에서 본인의 Lecture Note - Linear Regression, Macroeconometrics, Advanced Machine Learning_"
+    "<br>\n",
+    "\n",
+    "_**출처: 대학원에서 본인의 Lecture Note - Linear Regression, Macroeconometrics, Advanced Machine Learning**_"
    ]
   }
  ],
