--- a/Algorithm/Cheat Sheet for Coding Test.ipynb
+++ b/Algorithm/Cheat Sheet for Coding Test.ipynb
@@ -544,9 +544,9 @@
     "print(binary_str)       # 0b1101\n",
     "print(binary_str[2:])   # 접두사를 제외하고 숫자의 문자열만 출력\n",
     "\n",
-    "# `문자열`을 n진수 정수로 변환: int(str, n)\n",
+    "# n진수인 `문자열`을 10 진수 정수로 변환: int(str, n)\n",
     "S = '23043'\n",
-    "I = int(S,5)    # 5진수 정수로 변환\n",
+    "I = int(S,5)    # 5진수 정수를 10진수로 변환\n",
     "print(I)        # 1648\n",
     "\n",
     "# 10진수를 다른 진수로 변경하는 함수 직접 만들기 (divmod 이용)\n",
@@ -1500,8 +1500,8 @@
     "| `\\s`      | **공백 문자 (스페이스, 탭 등)**   | `'a b\\tc'`      | `re.findall('\\s', 'a b\\tc')` → `[' ', '\\t']`              | \n",
     "| `\\S`      | **공백이 아닌 문자**           | `' a\\nb'`       | `re.findall('\\S', ' a\\nb')` → `['a', 'b']`                |\n",
     "| `\\|`      | **OR (A 또는 B)**             | `'abc'`    | `re.findall('a \\| c', 'abc')`→`['a', 'c']` |\n",
-    "| `(ab)`    | **그룹으로 묶기**             | `'abcab'`       | `re.findall('(ab)', 'abcab')` → `['ab', 'ab']`            |\n",
-    "| `(?:...)` | **비참조 그룹** (묶지만 캡처 안 함) | `'abcab'`       | `re.findall('(?:ab)', 'abcab')` → `['ab', 'ab']`          |\n",
+    "| `(ab)`    | **그룹으로 묶기**             | `'abcab'` <br> `'ab ab'`       | `re.findall('(ab)', 'abcab')` → `['ab', 'ab']` <br> `re.findall('(a)b', 'ab ab')` → `['a', 'a']`           |\n",
+    "| `(?:...)` | **비참조 그룹** (묶지만 캡처 안 함) | `'abcab'` <br> `'ab ab'`      | `re.findall('(?:ab)', 'abcab')` → `['ab', 'ab']` <br> `re.findall('(?:a)b', 'ab ab')` → `['ab', 'ab']`         |\n",
     "| `(?=...)` | **뒤가 특정 조건일 때 매칭**      | `'abc'`         | `re.findall('a(?=b)', 'abc')` → `['a']`                   |\n",
     "| `(?!...)` | **뒤가 특정 조건이 아닐 때 매칭**   | `'adc'`         | `re.findall('a(?!b)', 'adc')` → `['a']`                   |\n",
     "| `(?<=...)` | **앞이 특정 조건일 때 매칭**      | `'abc'`         | `re.findall('(?<=b)c', 'abc')` → `['c']`                   |\n",
@@ -2028,7 +2028,7 @@
     "|      Find     |      `str1.find(sub)`     | 문자열에서 `sub`가 처음 나타나는 인덱스를 반환 (없으면 `-1` 반환)       |\n",
     "|     Rfind     |     `str1.rfind(sub)`     | 문자열에서 `sub`가 마지막으로 나타나는 인덱스를 반환 (없으면 `-1` 반환)    |\n",
     "|     Count     |     `str1.count(sub)`     | 문자열에서 `sub`의 등장 횟수를 반환                           |\n",
-    "|    Replace    |  `str1.replace(old, new)` | 문자열에서 `old`를 `new`로 바꾼 새로운 문자열 반환                |\n",
+    "|    Replace    |`str1.replace(old,new,n)` | 문자열에서 처음 `n`개의 `old`를 `new`로 바꾼 새로운 문자열 반환 <br> (`n`지정 안해주면 default = -1 : 전부 바꿈)    |\n",
     "|     Split     |    `str1.split(delim)`    | 문자열을 구분자 `delim`을 기준으로 분리하여 리스트로 반환              |\n",
     "|      Join     |     `delim.join(str1)`    | 구분자 `delim`을 사용하여 문자열 `str1`의 원소를 합친 새로운 문자열 반환  |\n",
     "|     Strip     |       `str1.strip()`      | 문자열 양옆의 공백 또는 특정 문자를 제거한 새로운 문자열 반환              |\n",
