fix: Clarify Conditions for Orthogonal Matrix

--- a/Statistics/SVD and PCA.ipynb
+++ b/Statistics/SVD and PCA.ipynb
@@ -87,10 +87,11 @@
     "\n",
     "## 7) 직교행렬(Orthogonal Matrix)\n",
     "### (1) 정의\n",
-    "$A$가 직교행렬이라는 것은 ① $A: n \\times n$ 행렬, ② $A$의 열벡터들의 **정규직교** 일 때이다.\n",
+    "$A$가 직교행렬이라는 것은 ① $A: n \\times n$ 행렬, ② $A$의 열벡터들이 **정규직교** 집합일 때이다.\n",
     "\n",
     "### (2) 정리\n",
-    "정사각행렬 $A$가 직교행렬일 필요충분조건은 $A^TA=I$ 즉, $A^T=A^{-1}$이다.\n",
+    "$1.$ 정사각행렬 $A$가 직교행렬일 필요충분조건은 $A^TA=I$ 즉, $A^T=A^{-1}$이다.       \n",
+    "$2.$ $A^T=A^{-1}$ 으로부터 $AA^T=I$ 이기도 한데, 이는 정사각행렬 $A$가 직교행렬이라면 $A$의 행벡터들의 집합도 정규직교집합임을 의미한다.                      \n",
     "\n",
     "## 8) 직교사영(Orthogonal Projection)\n",
     "### (1) 도출\n",
