feat: Add Truncated SVD section and improve clarity in PCA  formula

--- a/Statistics/SVD and PCA.ipynb
+++ b/Statistics/SVD and PCA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9a3c8ade",
+   "id": "08ae7ca1",
    "metadata": {},
    "source": [
     "# 1. 고유값과 고유벡터\n",
@@ -21,8 +21,14 @@
     "\n",
     "$2.$ $n\\times n$행렬의 서로 다른 고유값을 $\\lambda_1, \\lambda_2, \\cdots, \\lambda_k$이라 하고 각각의 고유값에 해당하는 고유벡터를 $\\vec{v}_1, \\vec{v}_2, \\cdots, \\vec{v}_k$ 라고 하면 $\\{ \\vec{v}_1, \\vec{v}_2, \\cdots, \\vec{v}_k \\}$는 일차독립이다.\n",
     "\n",
-    "---\n",
-    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abf82267",
+   "metadata": {},
+   "source": [
     "# 2. Gram-Shmidt 직교화\n",
     "## 1) 두 벡터의 직교\n",
     "### (1) 정의\n",
@@ -175,8 +181,14 @@
     "> $\\quad \\vec{u}_k=\\vec{v}_k-\\dfrac{\\vec{v}_k \\cdot \\vec{u}_1}{\\vec{u}_1 \\cdot \\vec{u}_1}\\vec{u}_1-\\dfrac{\\vec{v}_k \\cdot \\vec{u}_2}{\\vec{u}_2 \\cdot \\vec{u}_2}\\vec{u}_2 - \\: \\cdots \\: -\\dfrac{\\vec{v}_k \\cdot \\vec{u}_{k-1}}{\\vec{u}_{k-1} \\cdot \\vec{u}_{k-1}}\\vec{u}_{k-1}$\n",
     "\n",
     "\n",
-    "---\n",
-    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a3c8ade",
+   "metadata": {},
+   "source": [
     "# 3. 특이값 분해(SVD; Singular Value Decomposition)\n",
     "\n",
     "### (1) 정의\n",
@@ -345,7 +357,7 @@
     "\n",
     "### [5] 원래 차원으로 복원 (선택)\n",
     "\n",
-    "$\\hat{X} = Z W^\\top + \\bar{X}$          \n",
+    "$\\hat{X} = Z W^\\top + \\bar{X} \\qquad \\text{where} \\quad \\bar{X} = \\mathbf{1}_n \\vec{\\mu}^\\top \\in \\mathbb{R}^{n\\times p}$ (데이터의 열평균 벡터, 즉 중심화 이전의 평균값)         \n",
     "→ 복원된 데이터 $\\hat{X} \\in \\mathbb{R}^{n \\times p}$\n",
     "\n",
     "<br>\n",
@@ -374,6 +386,47 @@
     "<br>\n",
     "\n",
     "_**출처: 대학원에서 본인의 Lecture Note - Linear Regression, Macroeconometrics, Advanced Machine Learning**_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a00b80e",
+   "metadata": {},
+   "source": [
+    "# 5. Truncated SVD\n",
+    "\n",
+    "기존 SVD를 다시 써 보면 다음과 같다.\n",
+    "\n",
+    "**SVD:**\n",
+    "\n",
+    "$$\n",
+    "A=U\\Sigma V^T\n",
+    "$$ \n",
+    "\n",
+    "- $A \\in \\mathbb{R}^{m\\times n}$\n",
+    "- $U \\in \\mathbb{R}^{n\\times n}$\n",
+    "- $\\Sigma \\in \\mathbb{R}^{n\\times p}$\n",
+    "- $V \\in \\mathbb{R}^{p\\times p}$\n",
+    "\n",
+    "\n",
+    "한편 PCA에서는 $V=[\\vec{v}_1 \\quad \\vec{v}_2 \\quad \\cdots \\quad \\vec{v}_n] \\in \\mathbb{R}^{p \\times p}$ 중 상위 $k$개의 주성분만 선택하는데, 이에 대응되는 상위 $k$ 개의 특이값(=정보량이 큰 주성분)을 $\\Sigma$ 에서 선택하고, 또 $U$ 에서 대응되는 앞쪽의 $k$ 개의 열벡터만 선택하여 SVD를 다음과 같이 다시 써 볼 수 있다. 이를 Truncated SVD라 한다.\n",
+    "\n",
+    "**Truncated SVD:**\n",
+    "\n",
+    "$$\n",
+    "A\\approx U_k\\Sigma_k V_{k}^T\n",
+    "$$ \n",
+    "\n",
+    "- $A \\in \\mathbb{R}^{m\\times n}$\n",
+    "- $U_k \\in \\mathbb{R}^{m\\times k}$ : 앞쪽에서부터 대응되는 $k$ 개의 열벡터만 남긴 행렬\n",
+    "- $\\Sigma_k \\in \\mathbb{R}^{k\\times k}$ : 상위 $k$ 개의 특이값만 남긴 대각행렬\n",
+    "- $V_k \\in \\mathbb{R}^{n\\times k}$ : 앞쪽에서부터 대응되는 $k$ 개의 열벡터만 남긴 행렬\n",
+    "  \n",
+    "\n",
+    "**따라서 PCA를 위한 SVD를 할 것이라면 처음부터 Truncated SVD를 구해도 된다.**\n",
+    "\n",
+    "$$\n",
+    "\\tilde{X} \\approx U_k \\Sigma_k V_{k}^\\top \\qquad \\Rightarrow \\qquad Z = \\tilde{X} W = \\tilde{X} V_k (= U_k \\Sigma_k \\,\\,\\, V_{k}^\\top V_k) = U_k \\Sigma_K "
    ]
   }
  ],
