fix: Correct formatting

--- a/Statistics/SVD and PCA.ipynb
+++ b/Statistics/SVD and PCA.ipynb
@@ -426,7 +426,8 @@
     "**따라서 PCA를 위한 SVD를 할 것이라면 처음부터 Truncated SVD를 구해도 된다.**\n",
     "\n",
     "$$\n",
-    "\\tilde{X} \\approx U_k \\Sigma_k V_{k}^\\top \\qquad \\Rightarrow \\qquad Z = \\tilde{X} W = \\tilde{X} V_k (= U_k \\Sigma_k \\,\\,\\, V_{k}^\\top V_k) = U_k \\Sigma_K "
+    "\\tilde{X} \\approx U_k \\Sigma_k V_{k}^\\top \\qquad \\Rightarrow \\qquad Z = \\tilde{X} W = \\tilde{X} V_k (= U_k \\Sigma_k \\,\\,\\, V_{k}^\\top V_k) = U_k \\Sigma_K\n",
+    "$$"
    ]
   }
  ],
