fix: Remove unnecessary tag

--- a/Statistics/Box-Cox Transformation.ipynb
+++ b/Statistics/Box-Cox Transformation.ipynb
@@ -17,7 +17,7 @@
     "Consider the family of regression models:\n",
     "\n",
     "$$\n",
-    "Y_i^{(\\lambda)} = \\beta_0 + \\beta_1 x_{i1} + \\beta_2 x_{i2} + \\cdots + \\beta_{p-1} x_{i,p-1} + \\epsilon_i, \\quad i = 1, \\ldots, n,      \\tag{9}\n",
+    "Y_i^{(\\lambda)} = \\beta_0 + \\beta_1 x_{i1} + \\beta_2 x_{i2} + \\cdots + \\beta_{p-1} x_{i,p-1} + \\epsilon_i, \\quad i = 1, \\ldots, n\n",
     "$$\n",
     "\n",
     "$$\n",
