Update image paths

--- a/Algorithm/Notes/Data Structure and Algorithm.ipynb
+++ b/Algorithm/Notes/Data Structure and Algorithm.ipynb
@@ -714,7 +714,7 @@
     "- 임의 크기 데이터를 고정된 길이의 데이터로 매핑하는데 사용할 수 있는 함수\n",
     "- 파이썬의 `dict`, `set`이 대표적인 해시테이블 기반 구조\n",
     "\n",
-    "<center><img src='image/Data Structure and Algorithm_hash_table.svg', width=600></center>\n",
+    "<center><img src='../image/image/Data Structure and Algorithm_hash_table.svg', width=600></center>\n",
     "\n",
     "<div align=\"center\">\n",
     "\n",
