Update Image Paths

--- a/Algorithm/Notes/Data Structure and Algorithm.ipynb
+++ b/Algorithm/Notes/Data Structure and Algorithm.ipynb
@@ -714,7 +714,7 @@
     "- 임의 크기 데이터를 고정된 길이의 데이터로 매핑하는데 사용할 수 있는 함수\n",
     "- 파이썬의 `dict`, `set`이 대표적인 해시테이블 기반 구조\n",
     "\n",
-    "<center><img src='../image/image/Data Structure and Algorithm_hash_table.svg', width=600></center>\n",
+    "<center><img src='../image/Data Structure and Algorithm_hash_table.svg', width=600></center>\n",
     "\n",
     "<div align=\"center\">\n",
     "\n",
@@ -954,7 +954,7 @@
    "source": [
     "### 5) 그래프(graph)\n",
     "\n",
-    "<img src=\"image/Data Structure and Algorithm_graph.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"../image/Data Structure and Algorithm_graph.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "<br>\n",
     "\n",
     "* 참고) 트리도 그래프 안에 포함된다: 각 딕셔너리의 key가 트리의 부모 Node, value들은 자식 Node로 표현"
@@ -1056,7 +1056,7 @@
     "예시) \n",
     "<br>\n",
     "\n",
-    "<img src=\"image/Data Structure and Algorithm_graph_weighted.jpg\" width=\"600\" style=\"display: block; margin: 0;\">"
+    "<img src=\"../image/Data Structure and Algorithm_graph_weighted.jpg\" width=\"600\" style=\"display: block; margin: 0;\">"
    ]
   },
   {
@@ -1154,7 +1154,7 @@
     "        raise fibError(\"n must be positive!\")\n",
     "```\n",
     "\n",
-    "<center><img src='image/Data Structure and Algorithm_recursive_function.png', width = 700></center>\n",
+    "<center><img src='../image/Data Structure and Algorithm_recursive_function.png', width = 700></center>\n",
     "\n",
     "<div align=\"center\">\n",
     "\n",
@@ -1204,7 +1204,7 @@
     "\n",
     "**예시)**\n",
     "\n",
-    "<img src=\"image/Data Structure and Algorithm_bfs.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"../image/Data Structure and Algorithm_bfs.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "\n",
     "\n",
     "<br>\n",
@@ -1311,7 +1311,7 @@
     "\n",
     "**예시)**\n",
     "\n",
-    "<img src=\"image/Data Structure and Algorithm_dfs.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"../image/Data Structure and Algorithm_dfs.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "<br>\n",
     "\n",
     "> [1] 재귀함수를 통해 자식노드가 없을 때까지 계속해서 왼쪽부터 수직아래로 내려가며 자료를 탐색   \n",
@@ -1399,7 +1399,7 @@
     "* 장점: 구형하기 쉽고, 정렬되지 않은 상태에서도 사용 가능\n",
     "* 단점: 검색 대상 리스트가 길어지면 비효율적 - (최대) 시간 복잡도: $O(n)$\n",
     "\n",
-    "<img src=\"image/Data Structure and Algorithm_linear_search.png\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"../image/Data Structure and Algorithm_linear_search.png\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "\n",
     "[What is Linear Search?](https://www.geeksforgeeks.org/dsa/what-is-linear-search/)"
    ]
@@ -1457,7 +1457,7 @@
     "* 장점: 선형 탐색에 비해 빠른 속도 - 시간 복잡도: $O(log{n})$\n",
     "* 단점: 미리 오름차순 정렬되어 있어야 사용 가능\n",
     "\n",
-    "<img src=\"image/Data Structure and Algorithm_binary_search.png\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"../image/Data Structure and Algorithm_binary_search.png\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "\n",
     "[Algorithms: Binary Search](https://dolly-desir.medium.com/algorithms-binary-search-2656c7eb5049)"
    ]
@@ -1578,7 +1578,7 @@
     "* 상용 라이브러리에 많이 쓰임\n",
     "* 시간 복잡도: $O(nlog(n))$\n",
     "\n",
-    "<img src=\"image/Data Structure and Algorithm_merge_sort.jpg\" width=\"1200\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"../image/Data Structure and Algorithm_merge_sort.jpg\" width=\"1200\" style=\"display: block; margin: 0;\">\n",
     "\n",
     "<br>\n",
     "\n",
@@ -1729,23 +1729,23 @@
     "* 평균 시간 복잡도: $O(nlog(n))$\n",
     "* 최악 시간 복잡도: $O(n^2)$\n",
     "\n",
-    "<img src=\"image/Data Structure and Algorithm_quick_sort1.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"../image/Data Structure and Algorithm_quick_sort1.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "<br>\n",
     "\n",
     "> [1] pivot을 0번째 값으로 지정했다고 하자.     \n",
     "> [2] 이 pivot을 기준으로 list를 탐색하며 pivot보다 [작은 값들], [같은 값들], [큰 값들]로 모아서 나눠준다.\n",
     "\n",
     "<br>\n",
-    "<img src=\"image/Data Structure and Algorithm_quick_sort2.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"../image/Data Structure and Algorithm_quick_sort2.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "<br>\n",
-    "<img src=\"image/Data Structure and Algorithm_quick_sort3.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"../image/Data Structure and Algorithm_quick_sort3.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "<br>\n",
     "\n",
     "> [3] 나눠진 [작은 값들], [큰 값들]에 대해서 다시 quick_sort를 해준다.  $\\quad$ _- 재귀함수 이용: 따라서 이 때에도 pivot은 계속 위에서 정한 pivot과 같이 각 값들의 0번째 값_    \n",
     "> [4] 이를 나눠진 값들의 길이가 모두 1 이하일 때까지 반복한다.\n",
     "\n",
     "<br>\n",
-    "<img src=\"image/Data Structure and Algorithm_quick_sort4.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
+    "<img src=\"../image/Data Structure and Algorithm_quick_sort4.jpg\" width=\"600\" style=\"display: block; margin: 0;\">\n",
     "<br>\n",
     "\n",
     "> [5] 최종적으로 나눠진 값들을 그대로 이어 붙여주면 된다."
